--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <title>Alienware Area-51m</title>
-  <link rel="stylesheet" type="text/css" href="/Users/andrewkondik/Documents/Fullstack%20Cert/(7)Responsive%20Web%20Design%20Projects/product_landing_page/style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <style media="screen">
     /* For desktop: */
     .col-1 {
